--- a/notebooks/2_registry_tensorflow_sas_model_manager.ipynb
+++ b/notebooks/2_registry_tensorflow_sas_model_manager.ipynb
@@ -165,7 +165,7 @@
     "    :return: None\n",
     "    '''\n",
     "    \n",
-    "    with Session(hostname=SERVER, username=USER, password=PASSWORD, verify_ssl=False):\n",
+    "    with Session(hostname=SERVER, username=USER, password=PASSWORD, protocol='http', verify_ssl=False):\n",
     "        #id = uuid.uuid4()\n",
     "        #uuid_project = project + '_' + str(id)[:8]\n",
     "\n",
@@ -199,8 +199,8 @@
    "outputs": [],
    "source": [
     "#Base\n",
-    "BASE_DIR_PATH = os.getcwd()\n",
-    "DATA_DIR_PATH = os.path.join(BASE_DIR_PATH, '../data')\n",
+    "BASE_DIR_PATH = '/bd-fs-mnt/TenantShare/HMEQ'\n",
+    "DATA_DIR_PATH = '/bd-fs-mnt/TenantShare/HMEQ'\n",
     "\n",
     "# Data directories paths\n",
     "TRAIN_DIR_PATH = os.path.join(DATA_DIR_PATH, 'train')\n",
@@ -209,10 +209,10 @@
     "TRAIN_DATA_PATH = os.path.join(TRAIN_DIR_PATH, 'train.csv')\n",
     "\n",
     "# Models directory\n",
-    "MODELS_DIR = os.path.join(BASE_DIR_PATH, '../models')\n",
+    "MODELS_DIR = os.path.join(BASE_DIR_PATH, 'models')\n",
     "\n",
     "# Deriverables directory\n",
-    "DELIVERS_DIR = os.path.join(BASE_DIR_PATH, '../deliverables')\n",
+    "DELIVERS_DIR = os.path.join(BASE_DIR_PATH, 'deliverables')\n",
     "CHAMPION_DIR_NAME = 'champion'\n",
     "\n",
     "# Champion directory\n",
@@ -228,14 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please provide User Password:\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " ········\n"
+      "Please provide User Password:\n",
+      "········\n"
      ]
     }
    ],
@@ -244,7 +238,7 @@
     "\n",
     "MODEL_REGISTRY_META = read_yaml('./model_registry_config.yaml')\n",
     "SERVER = MODEL_REGISTRY_META['connection']['server']\n",
-    "USER= 'russasdemo'\n",
+    "USER= 'ugo'\n",
     "\n",
     "print('Please provide User Password:')\n",
     "\n",
@@ -252,6 +246,27 @@
     "\n",
     "PROJECT_NAME = MODEL_REGISTRY_META['modelrepository_meta']['project_name']\n",
     "REPOSITORY = MODEL_REGISTRY_META['modelrepository_meta']['repository']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connection:\r\n",
+      "    server: hpecp14.local:10007\r\n",
+      "modelrepository_meta:\r\n",
+      "    project_name: \"sas_modelops_tensorflow_ezmeral\"\r\n",
+      "    repository: Public"
+     ]
+    }
+   ],
+   "source": [
+    "!cat model_registry_config.yaml"
    ]
   },
   {
@@ -301,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirements file created under  /home/jovyan/work/notebooks/../deliverables/champion/requirements.txt\n"
+      "Requirements file created under  /bd-fs-mnt/TenantShare/HMEQ/deliverables/champion/requirements.txt\n"
      ]
     }
    ],
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/notebooks/../deliverables/champion/1603087114\n"
+      "/bd-fs-mnt/TenantShare/HMEQ/deliverables/champion/variables\n"
      ]
     }
    ],
@@ -410,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/deliverables/champion/1603087114.zip\n"
+      "/bd-fs-mnt/TenantShare/HMEQ/deliverables/champion/variables.zip\n"
      ]
     }
    ],
@@ -429,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/deliverables/champion.zip\n"
+      "/bd-fs-mnt/TenantShare/HMEQ/deliverables/champion.zip\n"
      ]
     }
    ],
@@ -455,32 +470,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/urllib3/connectionpool.py:981: InsecureRequestWarning: Unverified HTTPS request is being made to host '172.28.106.218'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'sas_modelops_tensorflow_ezmeral'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "PROJECT_NAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "status = run_model_tracking(PROJECT_NAME, MODELNAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sas_modelops_tensorflow_openshift successfully created!\n"
+      "sas_modelops_tensorflow_ezmeral successfully created!\n"
      ]
     }
    ],
@@ -513,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
