--- a/notebooks/0_training_settings.ipynb
+++ b/notebooks/0_training_settings.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Variables\n",
     "\n",
     "BASE_DIR_PATH = os.getcwd()\n",
-    "DATA_DIR_PATH = os.path.join(BASE_DIR_PATH, '../data')\n",
-    "RAW_DATA_PATH = os.path.join(DATA_DIR_PATH, 'raw/raw_data.csv')"
+    "DATA_DIR_PATH = os.path.join(BASE_DIR_PATH, '/bd-fs-mnt/TenantShare/HMEQ')\n",
+    "RAW_DATA_PATH = os.path.join(DATA_DIR_PATH, 'hmeq.csv')"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_dir_paths = make_data_directories(DATA_DIR_PATH)\n",
     "split_raw_train_test(RAW_DATA_PATH, data_dir_paths)"
@@ -306,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
